# MemoryBalancer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  anal.py  anal_by_rate.py  anal_gc_log.py  anal_mmap_log.py  benchmark.py  browse_website.py  cg  clean_log  clean_out  compile.sh  controller.h  debug.sh  eval.py  gen.py  generate_results.sh  hello-world.cc  jetstream.py  main.cpp  megaplot.py  nightly-run.sh  run.sh  runtime.h  single_eval.py  splay.js  util.h  v8_commit
04/2023-04-26-12-28-45/: 0.html  1.html  10.html  101.txt  102.txt  105.txt  107.txt  11.html  111.txt  117.txt  12.html  13.html  131.txt  133.txt  135.txt  14.html  17.html  18.html  2.txt  20.html  22.txt  23.html  24.html  24.txt  34.txt  36.txt  37.txt  40.txt  43.txt  46.txt  49.txt  5.html  50.txt  6.html  61.txt  66.txt  7.html  72.txt  80.txt  81.txt  (+8 more)
04/2023-04-26-12-33-25/: 0.html  1.html  EVAL.tex.txt
04/2023-04-26-12-34-39/: 0.html  16.txt  18.txt  19.txt  20.txt  26.txt  31.txt  4.html  47.txt  48.txt  52.txt  53.txt  58.txt  6.html  60.txt  61.txt  9.html  EVAL.tex.txt
04/2023-04-26-12-36-09/: 0.html  10.html  101.txt  102.txt  108.txt  109.txt  111.txt  115.txt  116.txt  12.html  122.txt  124.txt  125.txt  129.txt  13.html  130.txt  137.txt  143.txt  145.txt  15.html  150.txt  154.txt  16.html  16.txt  160.txt  17.html  18.html  18.txt  19.html  2.html  20.txt  21.html  23.html  24.html  33.txt  38.txt  39.txt  42.txt  46.txt  48.txt  (+13 more)
04/2023-04-26-12-38-08/: EVAL.tex.txt
04/2023-04-26-12-41-13/: 0.html  1.html  10.html  108.txt  111.txt  112.txt  113.txt  116.txt  12.html  13.html  136.txt  14.html  143.txt  144.txt  150.txt  157.txt  16.html  160.txt  163.txt  170.txt  173.txt  178.txt  18.txt  189.txt  19.html  192.txt  20.html  20.txt  202.txt  206.txt  215.txt  226.txt  23.txt  234.txt  24.html  24.txt  25.html  27.html  28.html  29.html  (+20 more)
04/2023-04-26-12-41-28/: 0.html  1.html  103.txt  109.txt  11.html  114.txt  12.txt  123.txt  14.html  143.txt  147.txt  16.html  166.txt  17.html  172.txt  173.txt  184.txt  187.txt  188.txt  19.html  19.txt  202.txt  203.txt  207.txt  21.html  213.txt  24.html  26.html  31.txt  36.txt  4.txt  45.txt  54.txt  6.html  60.txt  63.txt  7.html  7.txt  74.txt  75.txt  (+11 more)
04/2023-04-26-12-47-05/: 0.html  10.txt  104.txt  115.txt  119.txt  122.txt  123.txt  128.txt  129.txt  130.txt  134.txt  136.txt  137.txt  15.html  16.html  16.txt  18.txt  19.html  2.html  21.html  22.html  27.txt  3.html  3.txt  33.txt  35.txt  4.html  4.txt  41.txt  44.txt  45.txt  (+17 more)
full_build/: build.sh  fetch.sh  nightly-run.sh
js/: acdc.js
logs/: 2020-12-22-13-11-27  2020-12-22-23-28-46  2020-12-23-0-23-21  2020-12-23-0-34-46  2021-3-12-14-39-34  2021-3-19-12-40-53  2021-3-19-13-22-10  2021-3-25-17-10-57  2021-3-25-17-13-34  2021-3-25-17-18-1  2021-3-25-17-21-34  2021-3-25-17-55-24
python/: EVAL.py  anal.py  anal_by_rate.py  anal_common.py  anal_gc_log.py  anal_work.py  analysis_charts.py  benchmark.py  cleanup.py  eval.py  eval_yg.py  fix_v8_commit.py  gc_regress.py  gen.py  gen_tex_table.py  git_check.py  login.py  macro.py  megaplot.py  paper.py  pareto.py  parse_balancer_out.py  parse_gc_log.py  plot.py  single_eval.py  single_run_analysis.py  upload.sh  util.py
scripts/: compile.sh  compile_v8.sh  debug.sh  run.sh
src/: acdc.cpp  acdc.hpp  controller.cpp  controller.h  controller.hpp  forward-decl.hpp  hyperparam.hpp  macro.cpp  macro.hpp  main.cpp  poll_daemon.cpp  poll_daemon.hpp  runtime.cpp  runtime.h  runtime.hpp  server.hpp  simulator.cpp  simulator.hpp  util.cpp  util.h  util.hpp  v8_eval.cpp  v8_eval.hpp  v8_util.hpp
(+1218 files in other folders)
